--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ button:hover {
     box-shadow: 6px 6px 6px rgb(59, 164, 84);
     border-radius: 8px;
     padding: 20px;
-    margin-bottom: 20px;
+    margin:30px;
 }
 
 .topic {
@@ -147,6 +147,7 @@ button:hover {
     text-align: center;
     display: none;
     color: var(--primary-color);
+    font-weight:bold;
 }
 
 #error {
